Add Pull & Push Jobs For Publishing Apps Datasyncs In AWS Staging & Integration
This is part of the Publishing Apps Migration to AWS

Also remove push jobs from Integration, these were originally added
so the Training environment could function, but this environment
has now been decommissioned.

--- a/hieradata_aws/class/staging/db_admin.yaml
+++ b/hieradata_aws/class/staging/db_admin.yaml
@@ -98,6 +98,17 @@ govuk_env_sync::tasks:
     temppath: "/tmp/content_tagger_production"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+  "push_content_tagger_production_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "30"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_tagger_production"
+    temppath: "/tmp/content_tagger_production"
+    url: "govuk-staging-database-backups"
+    path: "postgresql-backend"
   "pull_email_alert_api_production_daily":
     ensure: "present"
     hour: "3"
@@ -142,6 +153,17 @@ govuk_env_sync::tasks:
     temppath: "/tmp/service-manual-publisher_production"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+  "push_service-manual-publisher_production_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "30"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "service-manual-publisher_production"
+    temppath: "/tmp/service-manual-publisher_production"
+    url: "govuk-staging-database-backups"
+    path: "postgresql-backend"
   "pull_content_publisher_production_daily":
     ensure: "present"
     hour: "1"
@@ -152,6 +174,17 @@ govuk_env_sync::tasks:
     database: "content_publisher_production"
     temppath: "/tmp/content_publisher_production"
     url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+  "push_content_publisher_production_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "45"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_publisher_production"
+    temppath: "/tmp/content_publisher_production"
+    url: "govuk-staging-database-backups"
     path: "postgresql-backend"
   "pull_licensify_production_daily": &pull_licensify
     ensure: "present"
@@ -199,6 +232,17 @@ govuk_env_sync::tasks:
     temppath: "/tmp/collections_publisher_production"
     url: "govuk-production-database-backups"
     path: "mysql"
+  "push_collections_publisher_production_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "45"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "collections_publisher_production"
+    temppath: "/tmp/collections_publisher_production"
+    url: "govuk-staging-database-backups"
+    path: "mysql"
   "pull_contacts_production_daily":
     ensure: "present"
     hour: "2"
@@ -210,6 +254,17 @@ govuk_env_sync::tasks:
     temppath: "/tmp/contacts_production"
     url: "govuk-production-database-backups"
     path: "mysql"
+  "push_contacts_production_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "14"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "contacts_production"
+    temppath: "/tmp/contacts_production"
+    url: "govuk-staging-database-backups"
+    path: "mysql"
   "pull_search_admin_production_daily":
     ensure: "present"
     hour: "1"
@@ -220,6 +275,17 @@ govuk_env_sync::tasks:
     database: "search_admin_production"
     temppath: "/tmp/search_admin_production"
     url: "govuk-production-database-backups"
+    path: "mysql"
+  "push_search_admin_production_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "45"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "search_admin_production"
+    temppath: "/tmp/search_admin_production"
+    url: "govuk-staging-database-backups"
     path: "mysql"
   "pull_signon_production_daily":
     ensure: "present"
