--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -99,28 +99,6 @@ govuk_env_sync::tasks:
     temppath: "/tmp/content-register_production"
     url: "govuk-integration-database-backups"
     path: "postgresql-backend"
-  "push_content_publisher_production_integration_daily":
-    ensure: "present"
-    hour: "23"
-    minute: "15"
-    action: "push"
-    dbms: "postgresql"
-    storagebackend: "s3"
-    database: "content_publisher_production"
-    temppath: "/tmp/content_publisher_production"
-    url: "govuk-integration-database-backups"
-    path: "postgresql-backend"
-  "push_content_tagger_production_integration_daily":
-    ensure: "present"
-    hour: "3"
-    minute: "30"
-    action: "push"
-    dbms: "postgresql"
-    storagebackend: "s3"
-    database: "content_tagger_production"
-    temppath: "/tmp/content_tagger_production"
-    url: "govuk-integration-database-backups"
-    path: "postgresql-backend"
   "push_email_alert_api_integration_daily":
     ensure: "present"
     hour: "4"
@@ -187,28 +165,6 @@ govuk_env_sync::tasks:
     temppath: "/tmp/support_contacts_production"
     url: "govuk-integration-database-backups"
     path: "postgresql-backend"
-  "push_collections_publisher_integration_daily":
-    ensure: "present"
-    hour: "4"
-    minute: "30"
-    action: "push"
-    dbms: "mysql"
-    storagebackend: "s3"
-    database: "collections_publisher_production"
-    temppath: "/tmp/collections_publisher_production"
-    url: "govuk-integration-database-backups"
-    path: "mysql-backend"
-  "push_contacts_integration_daily":
-    ensure: "present"
-    hour: "2"
-    minute: "30"
-    action: "push"
-    dbms: "mysql"
-    storagebackend: "s3"
-    database: "contacts_production"
-    temppath: "/tmp/contacts_production"
-    url: "govuk-integration-database-backups"
-    path: "mysql-backend"
   "push_release_integration_daily":
     ensure: "present"
     hour: "1"
@@ -218,17 +174,6 @@ govuk_env_sync::tasks:
     storagebackend: "s3"
     database: "release_production"
     temppath: "/tmp/release_production"
-    url: "govuk-integration-database-backups"
-    path: "mysql-backend"
-  "push_search_admin_integration_daily":
-    ensure: "present"
-    hour: "0"
-    minute: "45"
-    action: "push"
-    dbms: "mysql"
-    storagebackend: "s3"
-    database: "search_admin_production"
-    temppath: "/tmp/search_admin_production"
     url: "govuk-integration-database-backups"
     path: "mysql-backend"
   "push_signon_integration_daily":
@@ -309,37 +254,70 @@ govuk_env_sync::tasks:
     path: "mongo-normal"
   "pull_collections_publisher_production_daily":
     ensure: "present"
-    hour: "1"
-    minute: "12"
+    hour: "3"
+    minute: "15"
     action: "pull"
     dbms: "mysql"
     storagebackend: "s3"
     database: "collections_publisher_production"
     temppath: "/tmp/collections_publisher_production"
-    url: "govuk-production-database-backups"
+    url: "govuk-staging-database-backups"
     path: "mysql"
+  "push_collections_publisher_integration_daily":
+    ensure: "present"
+    hour: "4"
+    minute: "30"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "collections_publisher_production"
+    temppath: "/tmp/collections_publisher_production"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
   "pull_contacts_production_daily":
     ensure: "present"
-    hour: "1"
+    hour: "4"
     minute: "14"
     action: "pull"
     dbms: "mysql"
     storagebackend: "s3"
     database: "contacts_production"
     temppath: "/tmp/contacts_production"
-    url: "govuk-production-database-backups"
+    url: "govuk-staging-database-backups"
     path: "mysql"
+  "push_contacts_integration_daily":
+    ensure: "present"
+    hour: "4"
+    minute: "45"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "contacts_production"
+    temppath: "/tmp/contacts_production"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
   "pull_search_admin_production_daily":
     ensure: "present"
-    hour: "1"
-    minute: "20"
+    hour: "2"
+    minute: "15"
     action: "pull"
     dbms: "mysql"
     storagebackend: "s3"
     database: "search_admin_production"
     temppath: "/tmp/search_admin_production"
-    url: "govuk-production-database-backups"
+    url: "govuk-staging-database-backups"
     path: "mysql"
+  "push_search_admin_integration_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "15"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "search_admin_production"
+    temppath: "/tmp/search_admin_production"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
   "pull_content_publisher_production_daily":
     ensure: "present"
     hour: "3"
@@ -352,16 +330,49 @@ govuk_env_sync::tasks:
     url: "govuk-staging-database-backups"
     path: "postgresql-backend"
     transformation_sql_filename: "content_publisher.sql"
+  "push_content_publisher_production_integration_daily":
+    ensure: "present"
+    hour: "4"
+    minute: "45"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_publisher_production"
+    temppath: "/tmp/content_publisher_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
   "pull_service-manual-publisher_staging":
     ensure: "present"
     hour: "2"
-    minute: "5"
+    minute: "55"
     action: "pull"
     dbms: "postgresql"
     storagebackend: "s3"
     database: "service-manual-publisher_production"
     temppath: "/tmp/service-manual-publisher_production"
     url: "govuk-staging-database-backups"
+    path: "postgresql-backend"
+  "pull_content_tagger_production_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "0"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_tagger_production"
+    temppath: "/tmp/content_tagger_production"
+    url: "govuk-staging-database-backups"
+    path: "postgresql-backend"
+  "push_content_tagger_production_integration_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "30"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_tagger_production"
+    temppath: "/tmp/content_tagger_production"
+    url: "govuk-integration-database-backups"
     path: "postgresql-backend"
   "pull_link_checker_api_production_daily":
     ensure: "present"
