--- a/hieradata/node/mysql-backup-1.backend.publishing.service.gov.uk.yaml
+++ b/hieradata/node/mysql-backup-1.backend.publishing.service.gov.uk.yaml
@@ -1,6 +1,6 @@
 govuk_env_sync::tasks:
   "push_collections_publisher_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "0"
     minute: "12"
     action: "push"
@@ -11,7 +11,7 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "mysql"
   "push_contacts_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "0"
     minute: "14"
     action: "push"
@@ -22,7 +22,7 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "mysql"
   "push_search_admin_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "0"
     minute: "18"
     action: "push"
