--- a/hieradata_aws/class/production/db_admin.yaml
+++ b/hieradata_aws/class/production/db_admin.yaml
@@ -11,9 +11,9 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
   "push_collections_publisher_production_daily":
-    ensure: "disabled"
-    hour: "1"
-    minute: "00"
+    ensure: "present"
+    hour: "0"
+    minute: "12"
     action: "push"
     dbms: "mysql"
     storagebackend: "s3"
@@ -33,9 +33,9 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "mysql"
   "push_contacts_production_daily":
-    ensure: "disabled"
-    hour: "1"
-    minute: "15"
+    ensure: "present"
+    hour: "0"
+    minute: "14"
     action: "push"
     dbms: "mysql"
     storagebackend: "s3"
@@ -66,9 +66,9 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
   "push_content_publisher_production_daily":
-    ensure: "disabled"
-    hour: "2"
-    minute: "00"
+    ensure: "present"
+    hour: "0"
+    minute: "45"
     action: "push"
     dbms: "postgresql"
     storagebackend: "s3"
@@ -88,9 +88,9 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
   "push_content_tagger_production_daily":
-    ensure: "disabled"
-    hour: "1"
-    minute: "30"
+    ensure: "present"
+    hour: "0"
+    minute: "6"
     action: "push"
     dbms: "postgresql"
     storagebackend: "s3"
@@ -132,9 +132,9 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "mongo-normal"
   "push_govuk_content_production":
-    ensure: "disabled"
+    ensure: "present"
     hour: "2"
-    minute: "20"
+    minute: "51"
     action: "push"
     dbms: "documentdb"
     storagebackend: "s3"
@@ -198,9 +198,9 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
   "push_maslow_production":
-    ensure: "disabled"
+    ensure: "present"
     hour: "1"
-    minute: "05"
+    minute: "21"
     action: "push"
     dbms: "documentdb"
     storagebackend: "s3"
@@ -220,7 +220,7 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "mongo-normal"
   "push_search_admin_production_daily":
-    ensure: "disabled"
+    ensure: "present"
     hour: "0"
     minute: "20"
     action: "push"
@@ -242,9 +242,9 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "mysql"
   "push_service_manual_publisher_production_daily":
-    ensure: "disabled"
-    hour: "1"
-    minute: "5"
+    ensure: "present"
+    hour: "0"
+    minute: "36"
     action: "push"
     dbms: "postgresql"
     storagebackend: "s3"
@@ -264,7 +264,7 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
   "push_short_url_manager_production":
-    ensure: "disabled"
+    ensure: "present"
     hour: "1"
     minute: "25"
     action: "push"
@@ -297,7 +297,7 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
   "push_travel_advice_publisher_production":
-    ensure: "disabled"
+    ensure: "present"
     hour: "1"
     minute: "35"
     action: "push"
@@ -403,9 +403,9 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "mysql"
   "push_publisher_production":
-    ensure: "disabled"
+    ensure: "present"
     hour: "1"
-    minute: "10"
+    minute: "33"
     action: "push"
     dbms: "documentdb"
     storagebackend: "s3"
