Add wildcard source to logs and fix sourcetype stanza

--- a/modules/govuk_splunk/templates/opt/splunkforwarder/etc/apps/govuk_frontend/default/inputs.conf
+++ b/modules/govuk_splunk/templates/opt/splunkforwarder/etc/apps/govuk_frontend/default/inputs.conf
@@ -1,3 +1,3 @@
-[monitor:///var/log/nginx/lb-access.log]
-source_type = misc_text
+[monitor:///var/log/nginx/*.log]
+sourcetype = misc_text
 index = test_data
