--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -162,7 +162,7 @@ govuk::apps::email_alert_api::email_archive_s3_enabled: false
 govuk::apps::email_alert_api::govuk_notify_template_id: '2844a647-6bf1-4b01-a25c-569d2cc00849'
 govuk::apps::email_alert_api::email_address_override: 'success@simulator.amazonses.com'
 #govuk::apps::email_alert_api::email_address_override_whitelist_only: true
-#govuk::apps::email_alert_api::delivery_request_threshold: "3000"
+govuk::apps::email_alert_api::delivery_request_threshold: "50000"
 govuk::apps::email_alert_api::email_service_provider: "DELAY"
 govuk::apps::email_alert_frontend::subscription_management_enabled: true
 govuk::apps::frontend::govuk_notify_template_id: '2844a647-6bf1-4b01-a25c-569d2cc00849'
