Add Datasync For Integration DocumentDB Databases
We have migrated the Mongo Databases in Integration
to DocumentDB to bring this environment inline with
AWS Staging (and soon Production). As result the datasync
needs updating too.

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -385,3 +385,58 @@ govuk_env_sync::tasks:
     temppath: "/tmp/link_checker_api_production"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+  "pull_maslow_production":
+    ensure: "present"
+    hour: "2"
+    minute: "35"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "maslow_production"
+    temppath: "/tmp/maslow_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
+  "pull_govuk_content_production":
+    ensure: "disabled"
+    hour: "4"
+    minute: "20"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "govuk_content_production"
+    temppath: "/tmp/govuk_content_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
+  "pull_publisher_production":
+    ensure: "present"
+    hour: "3"
+    minute: "10"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "publisher_production"
+    temppath: "/tmp/publisher_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
+  "pull_short_url_manager_production":
+    ensure: "present"
+    hour: "3"
+    minute: "25"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "short_url_manager_production"
+    temppath: "/tmp/short_url_manager_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
+  "pull_travel_advice_publisher_production":
+    ensure: "present"
+    hour: "3"
+    minute: "35"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "travel_advice_publisher_production"
+    temppath: "/tmp/travel_advice_publisher_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
