Set an ASSET_HOST env var for Whitehall Frontend
Whitehall frontend has the surprising characteristic that it can be
served from two different hosts: www.gov.uk and
assets.publishing.service.gov.uk. The latter of which is used in the
case of CSV previews (Example [1]), at least until RFC 122 [2] is
implemented. Because of this serving a relative path to assets will fail
when the hostname changes.

To resolve this I've decided to set the asset host absolutely on
Whitehall frontend to the web root. Normally in this situation we'd also
have to set a draft asset host too, but since Whitehall draft is just
the same app proxied this isn't necessary.

[1]: https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/887009/exrates-monthly-0620.csv/preview
[2]: https://github.com/alphagov/govuk-rfcs/blob/master/rfc-122-csv-preview.md

--- a/hieradata_aws/class/whitehall_frontend.yaml
+++ b/hieradata_aws/class/whitehall_frontend.yaml
@@ -1,4 +1,5 @@
 ---
+govuk::apps::whitehall::asset_host: "%{hiera('govuk::deploy::config::website_root')}"
 govuk::apps::whitehall::configure_frontend: true
 govuk::apps::whitehall::nagios_memory_warning: 10737
 govuk::apps::whitehall::nagios_memory_critical: 12884
