Add a job to rerun master etl
This adds a job to repopulate the data that has been collected by the
[content data api etl
job](https://deploy.blue.production.govuk.digital/job/content_data_api_import_etl_master_process/).

The data collected by this initial etl job was giving inaccurate results
we traced this down to a [delay in results showing up in Google
analytics](https://support.google.com/analytics/answer/1070983?hl=en#:~:text=Data%20processing%20latency,for%20up%20to%20two%20days),
results can take between 24-48 hours to appear in GA, the initial etl
is run at 7am leaving only 7 hours for the data to appear in GA.

The newly added job will collect the data after 2 days leaving time for
for the data to appear correctly in GA.

We have added this new job instead of moving the current job back since
there are many references in the code of content-data to data collected
yesterday. The date ranges are also done from data received yesterday.
Changing this would be a big job, so initially we use the potentially
inaccurate data and then correct it after 2 days.

Trello card: https://trello.com/c/ODGWWnXt/2005-5-content-data-incorrect-users-who-found-this-useful-data-for-march

--- a/hieradata_aws/class/production/jenkins.yaml
+++ b/hieradata_aws/class/production/jenkins.yaml
@@ -53,6 +53,7 @@ govuk_jenkins::job_builder::jobs:
   - govuk_jenkins::jobs::email_alert_check
   - govuk_jenkins::jobs::enhanced_ecommerce_search_api
   - govuk_jenkins::jobs::passive_checks
+  - govuk_jenkins::jobs::content_data_api_re_run
   - govuk_jenkins::jobs::publish_special_routes
   - govuk_jenkins::jobs::publishing_api_archive_events
   - govuk_jenkins::jobs::remove_emergency_banner
