add s3 sync to govuk_env_sync
This will allow govuk_env_sync to do s3 syncing in addition to
database ones.

This work is done in the context of deprecating the old
Jenkins env sync job.

The content publisher s3 sync times were set to match the old
Jenkins job

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -440,3 +440,11 @@ govuk_env_sync::tasks:
     temppath: "/tmp/travel_advice_publisher_production"
     url: "govuk-production-database-backups"
     path: "mongo-normal"
+govuk_env_sync::s3_sync_tasks:
+  "s3_sync_content_publisher_from_staging_daily":
+    ensure: "present"
+    hour: "0"
+    minute: "45"
+    source_bucket: govuk-staging-content-publisher-activestorage
+    destination_bucket: govuk-integration-content-publisher-activestorage
+    delete: true
