--- a/hieradata_aws/class/staging/db_admin.yaml
+++ b/hieradata_aws/class/staging/db_admin.yaml
@@ -414,3 +414,11 @@ govuk_env_sync::tasks:
     temppath: "/tmp/travel_advice_publisher_production"
     url: "govuk-production-database-backups"
     path: "mongo-normal"
+govuk_env_sync::s3_sync_tasks:
+  "s3_sync_content_publisher_from_production_daily":
+    ensure: "present"
+    hour: "22"
+    minute: "40"
+    source_bucket: govuk-production-content-publisher-activestorage
+    destination_bucket: govuk-staging-content-publisher-activestorage
+    delete: true
