Add force publish email for collections publisher

--- a/hieradata/production.yaml
+++ b/hieradata/production.yaml
@@ -44,6 +44,7 @@ govuk::apps::content_publisher::google_tag_manager_id: "GTM-NQXC4TG"
 govuk::apps::content_publisher::google_tag_manager_preview: "env-2"
 govuk::apps::content_publisher::govuk_notify_template_id: "e00e89f5-b622-4dcb-8f30-e6c70231a940"
 govuk::apps::collections_publisher::govuk_notify_template_id: "e00e89f5-b622-4dcb-8f30-e6c70231a940"
+govuk::apps::collections_publisher::publish_without_2i_email: "mainstream-force-publishing-alerts@digital.cabinet-office.gov.uk"
 govuk::apps::contacts::enabled: false
 govuk::apps::content_publisher::enabled: false
 govuk::apps::government-frontend::cpu_warning: 200
