remove mongo backups carrenza
Do not backup mongo dbs in carrenza as they have been removed with the AWS migration

--- a/hieradata/class/backup.yaml
+++ b/hieradata/class/backup.yaml
@@ -7,6 +7,7 @@ govuk::node::s_backup::directories:
     directory: /var/lib/automongodbbackup/
     fq_dn: mongo-1.backend.%{hiera('app_domain')}
     priority: '001'
+    ensure: 'absent'
   backup_mysql_backups_mysql_backup_1:
     directory: /var/lib/automysqlbackup/
     fq_dn: mysql-backup-1.backend.%{hiera('app_domain')}
