--- a/hieradata/class/production/backup.yaml
+++ b/hieradata/class/production/backup.yaml
@@ -3,6 +3,7 @@ govuk::node::s_backup::directories:
     directory: /var/lib/automongodbbackup/
     fq_dn: mongo-1.backend.%{hiera('app_domain')}
     priority: '001'
+    ensure: 'absent'
   backup_mongodb_backups_performance_mongo:
     directory: /var/lib/automongodbbackup/
     fq_dn: performance-mongo-1.api.%{hiera('app_domain')}
