Don't trigger downstream deploys in production
Previously we tried to use the list of downstream applications as
a proxy for this behaviour, forgetting this is set commonly for all
environments, to avoid duplication. Since it would be surprising to
override it in production, this adds an explicit flag to disable
downstream deployment triggers in production.

--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -432,3 +432,5 @@ postfix::rewrite_mail_domain: 'digital.cabinet-office.gov.uk'
 postfix::rewrite_mail_list: 'machine.email.carrenza'
 
 nginx::config::stack_network_prefix: '10.13.0'
+
+govuk_jenkins::jobs::deploy_app::deploy_downstream: false
