--- a/hieradata/production.yaml
+++ b/hieradata/production.yaml
@@ -380,3 +380,5 @@ postfix::rewrite_mail_list: 'machine.email.carrenza'
 
 mongodb::s3backup::backup::s3_bucket: 'govuk-mongodb-backup-s3-production'
 mongodb::s3backup::backup::s3_bucket_daily: 'govuk-mongodb-backup-s3-daily-production'
+
+govuk_jenkins::jobs::deploy_app::deploy_downstream: false
