users: add robertscott.pp
two laptops, two keys, add to integration and CI

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -209,6 +209,7 @@ users::usernames:
   - peterhartshorn
   - rebeccapearce
   - richardtowers
+  - robertscott
   - rochtrinque
   - rosafox
   - sarahyoung
