--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -490,6 +490,7 @@ users::usernames:
   - peterhartshorn
   - rebeccapearce
   - richardtowers
+  - robertscott
   - rochtrinque
   - rosafox
   - sarahyoung
