Add Redis env vars for Email Alert Frontend
This provides Email Alert Frontend with the necessary information to
communicate with the backend redis instance. We are adding this in so
that Email Alert Frontend can use Redis as a distributed cache for rate
limiting across the Email Alert Frontend apps.

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -567,6 +567,9 @@ govuk::apps::email_alert_api::email_address_override_whitelist:
   - tom.whitwell@digital.cabinet-office.gov.uk
   - vanita.barrett@digital.cabinet-office.gov.uk
 
+govuk::apps::email_alert_frontend::redis_host: "%{hiera('sidekiq_host')}"
+govuk::apps::email_alert_frontend::redis_port: "%{hiera('sidekiq_port')}"
+
 govuk::apps::email_alert_service::enabled: true
 govuk::apps::email_alert_service::enable_unpublishing_queue_consumer: true
 govuk::apps::email_alert_service::rabbitmq_hosts:
