ci-agent-7, ci-agent-8: set govuk_solr to "removed" on these machines
in preparation for addition of new packaged solr

--- a/hieradata/node/ci-agent-7.ci.integration.publishing.service.gov.uk.yaml
+++ b/hieradata/node/ci-agent-7.ci.integration.publishing.service.gov.uk.yaml
@@ -1,3 +1,5 @@
 ---
 govuk_containers::elasticsearch::primary::enable: false
 govuk_containers::elasticsearch::secondary::enable: false
+
+govuk_solr::remove: true
